
    PIG-1282 make Zebra's pig test cases run on real cluster (chaow via yanz)

    PIG-1164 Addition of smoke tests (gauravj via yanz)

    PIG-1122 Changed version number of pig dev core jar used in Zebra build from 0.6.0 to 0.7.0
        to match Pig version number (yanz)

    PIG-1099 Changed version number to be 0.7.0 to match Pig version number
	change (yanz via gates)

  IMPROVEMENTS

    PIG-1361 Zebra TableLoader.getSchema() should return the projectionSchema specified in the constructor of TableLoader instead of pruned proejction by pig (gauravj via daijy)

    PIG-1291 Support of virtual column "source_table" on unsorted table (yanz)

    PIG-1315 Implementing OrderedLoadFunc interface for Zebra TableLoader (xuefux via yanz)

    PIG-1306 Support of locally sorted input splits (yanz)

    PIG-1268 Need an ant target that runs all pig-related tests in Zebra (xuefuz via yanz)

    PIG-1207 Data sanity check should be performed at the end of writing instead of later at query time (yanz)

    PIG-1206 Storing descendingly sorted PIG table as unsorted table (yanz)

    PIG-1240 zebra manifest file enhancement (gauravj via yanz)

    PIG-1140 Support of Hadoop 2.0 API (xuefuz via yanz)

    PIG-1170 new end-to-end and stress test cases (jing1234 via yanz)

    PIG-1136 Support of map split on hash keys with leading underscore (xuefuz via yanz)

    PIG-1125 Map/Reduce API Changes (Chao Wang via yanz)

    PIG-1104 Streaming Support (Chao Wang via yanz)

    PIG-1119 Support of "group" as a column name (Gaurav Jain via yanz)

    PIG-653  Pig Projection Push Down (Gaurav Jain via yanz)

    PIG-1111 Multiple Outputs Support (Gaurav Jain via yanz)

    PIG-1098 Zebra Performance Optimizations (yanz via gates)

	PIG-1074 Zebra store function should allow '::' in column names in output
	schema (yanz via gates)

    PIG-1077 Support record(row)-based file split in Zebra's
	TableInputFormat (chaow via gates)
